--- a/index.html
+++ b/index.html
@@ -230,16 +230,21 @@
                   data-wow-delay="0.7s"
                 >
                   <li>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/sahilgarg2907" target="_blank"
+                      ><i class="fa fa-twitter"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://github.com/sahilgarg29" target="_blank"
+                      ><i class="fa fa-github"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa fa-github"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a
+                      href="https://www.linkedin.com/in/sahilgarg2907/"
+                      target="_blank"
+                      ><i class="fa fa-linkedin"></i
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -295,9 +300,11 @@
                 data-wow-duration="0.8s"
                 data-wow-delay="0.2s"
               >
-                Hello, I’m a Sahil, Full Stack web-developer based in Haryana,
-                India. I have rich experience in Building Websites. Also I am
-                good at
+                I am a full-stack web developer specializing in front end & back
+                end web development, who enjoys solving complex problems and
+                architecting reliable solutions. Looking to thrive in an
+                environment that can utilize both my engineering and coding
+                skills to create engaging consumer- facing applications.
               </p>
               <div
                 class="mh-about-tag wow fadeInUp"
@@ -316,6 +323,7 @@
               </div>
               <a
                 href="https://drive.google.com/file/d/1UJVbQIQxvxEuGD-p96a7L0hdDF3QWPl0/view"
+                target="_blank"
                 class="btn btn-fill wow fadeInUp"
                 data-wow-duration="0.8s"
                 data-wow-delay="0.4s"
@@ -533,7 +541,7 @@
                         data-wow-delay="0.2s"
                       >
                         <img
-                          src="https://api.apify.com/v2/key-value-stores/Yf5n6gYNV1EX0mSam/records/inspiring-easley-d572d0.netlify.app-scroll_original"
+                          src="images/bewakoof-landing.png"
                           alt=""
                           class="img-fluid"
                         />
@@ -571,6 +579,7 @@
                         </p>
                         <a
                           href="https://inspiring-easley-d572d0.netlify.app/"
+                          target="_blank"
                           class="btn btn-fill wow fadeInUp"
                           data-wow-duration="0.8s"
                           data-wow-delay="0.7s"
@@ -578,6 +587,7 @@
                         >
                         <a
                           href="https://github.com/reeteshin/bewakoof"
+                          target="_blank"
                           class="btn btn-outline wow fadeInUp"
                           data-wow-duration="0.8s"
                           data-wow-delay="0.7s"
@@ -652,7 +662,8 @@
                           portfolio.
                         </p>
                         <a
-                          href="https://github.com/sahilgarg29/smallcase"
+                          href="https://smallcase-clone.netlify.app/"
+                          target="_blank"
                           class="btn btn-fill wow fadeInUp"
                           data-wow-duration="0.8s"
                           data-wow-delay="0.7s"
@@ -660,6 +671,7 @@
                         >
                         <a
                           href="https://github.com/sahilgarg29/smallcase"
+                          target="_blank"
                           class="btn btn-outline wow fadeInUp"
                           data-wow-duration="0.8s"
                           data-wow-delay="0.7s"
@@ -757,7 +769,7 @@
           <div class="map-image image-bg col-sm-12">
             <div class="container mt-30">
               <div class="row">
-                <div class="col-sm-12 col-md-6 mh-footer-address">
+                <div class="col-sm-12 col-md-12 mh-footer-address">
                   <div class="col-sm-12 xs-no-padding">
                     <div
                       class="mh-address-footer-item dark-bg shadow-1 media wow fadeInUp"
@@ -813,74 +825,7 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="col-sm-12 col-md-6 wow fadeInUp"
-                  data-wow-duration="0.8s"
-                  data-wow-delay="0.2s"
-                >
-                  <form
-                    id="contactForm"
-                    class="single-form quate-form wow fadeInUp"
-                    data-toggle="validator"
-                  >
-                    <div id="msgSubmit" class="h3 text-center hidden"></div>
-                    <div class="row">
-                      <div class="col-sm-12">
-                        <input
-                          name="name"
-                          class="contact-name form-control"
-                          id="name"
-                          type="text"
-                          placeholder="First Name"
-                          required
-                        />
-                      </div>
 
-                      <div class="col-sm-12">
-                        <input
-                          name="name"
-                          class="contact-email form-control"
-                          id="L_name"
-                          type="text"
-                          placeholder="Last Name"
-                          required
-                        />
-                      </div>
-
-                      <div class="col-sm-12">
-                        <input
-                          name="name"
-                          class="contact-subject form-control"
-                          id="email"
-                          type="email"
-                          placeholder="Your Email"
-                          required
-                        />
-                      </div>
-
-                      <div class="col-sm-12">
-                        <textarea
-                          class="contact-message"
-                          id="message"
-                          rows="6"
-                          placeholder="Your Message"
-                          required
-                        ></textarea>
-                      </div>
-
-                      <!-- Subject Button -->
-                      <div class="btn-form col-sm-12">
-                        <button
-                          type="submit"
-                          class="btn btn-fill btn-block"
-                          id="form-submit"
-                        >
-                          Send Message
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
                 <div
                   class="col-sm-12 mh-copyright wow fadeInUp"
                   data-wow-duration="0.8s"
@@ -895,17 +840,23 @@
                     <div class="col-sm-6">
                       <ul class="social-icon">
                         <li>
-                          <a href="https://www.linkedin.com/in/sahilgarg2907/"
+                          <a
+                            href="https://www.linkedin.com/in/sahilgarg2907/"
+                            target="_blank"
                             ><i class="fa fa-linkedin"></i
                           ></a>
                         </li>
                         <li>
-                          <a href="https://twitter.com/sahilgarg2907"
+                          <a
+                            href="https://twitter.com/sahilgarg2907"
+                            target="_blank"
                             ><i class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li>
-                          <a href="https://github.com/sahilgarg29"
+                          <a
+                            href="https://github.com/sahilgarg29"
+                            target="_blank"
                             ><i class="fa fa-github"></i
                           ></a>
                         </li>
